[gd_scene load_steps=50 format=2]

[ext_resource path="res://goblin/goblin_walk5.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://shitty_gun.png" type="Texture" id=3]
[ext_resource path="res://shitty_gun.gd" type="Script" id=4]
[ext_resource path="res://goblin/goblin_idle6.png" type="Texture" id=5]
[ext_resource path="res://goblin/goblin_idle2.png" type="Texture" id=6]
[ext_resource path="res://goblin/goblin_walk1.png" type="Texture" id=7]
[ext_resource path="res://goblin/goblin_walk7.png" type="Texture" id=8]
[ext_resource path="res://goblin/goblin_walk4.png" type="Texture" id=9]
[ext_resource path="res://goblin/goblin_idle5.png" type="Texture" id=10]
[ext_resource path="res://goblin/goblin_idle7.png" type="Texture" id=11]
[ext_resource path="res://goblin/goblin_idle4.png" type="Texture" id=12]
[ext_resource path="res://goblin/goblin_walk6.png" type="Texture" id=13]
[ext_resource path="res://goblin/goblin_walk3.png" type="Texture" id=14]
[ext_resource path="res://goblin/goblin_walk2.png" type="Texture" id=15]
[ext_resource path="res://goblin/goblin_idle3.png" type="Texture" id=16]
[ext_resource path="res://goblin/goblin_idle1.png" type="Texture" id=17]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=18]
[ext_resource path="res://goblin/goblin_hand.png" type="Texture" id=19]
[ext_resource path="res://bitmap_font.tres" type="DynamicFontData" id=20]
[ext_resource path="res://rat/rat1.png" type="Texture" id=21]
[ext_resource path="res://rat/rat3.png" type="Texture" id=22]
[ext_resource path="res://rat/rat2.png" type="Texture" id=23]
[ext_resource path="res://rat/rat8.png" type="Texture" id=24]
[ext_resource path="res://rat/rat9.png" type="Texture" id=25]
[ext_resource path="res://rat/rat7.png" type="Texture" id=26]
[ext_resource path="res://rat/ratwalk4.png" type="Texture" id=27]
[ext_resource path="res://rat/ratwalk5.png" type="Texture" id=28]
[ext_resource path="res://rat/ratwalk1.png" type="Texture" id=29]
[ext_resource path="res://rat/ratwalk3.png" type="Texture" id=30]
[ext_resource path="res://rat/ratwalk8.png" type="Texture" id=31]
[ext_resource path="res://rat/ratwalk7.png" type="Texture" id=32]
[ext_resource path="res://rat/ratwalk6.png" type="Texture" id=33]
[ext_resource path="res://rat/ratwalk2.png" type="Texture" id=34]
[ext_resource path="res://rat/rat6.png" type="Texture" id=35]
[ext_resource path="res://rat/rat4.png" type="Texture" id=36]
[ext_resource path="res://rat/rat5.png" type="Texture" id=37]
[ext_resource path="res://Enemy.gd" type="Script" id=38]
[ext_resource path="res://LevelManager.gd" type="Script" id=39]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.6666
height = 117.333

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 13 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "gun",
"speed": 5.0
} ]

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 20 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 24.0
height = 86.0

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 34 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 31 ) ],
"loop": true,
"name": "WALK",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 35 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "IDLE",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=9]
size = 12
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=10]
size = 12
font_data = ExtResource( 20 )

[node name="Node2D" type="Node2D"]

[node name="Player" type="Area2D" parent="."]
position = Vector2( 487, 244 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 21 )
scale = Vector2( 0.75, 0.75 )
shape = SubResource( 2 )

[node name="player_sprite" type="AnimatedSprite" parent="Player"]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 1 )
animation = "idle"

[node name="shitty_gun" type="AnimatedSprite" parent="Player/player_sprite"]
position = Vector2( 2.66664, 28 )
frames = SubResource( 3 )
animation = "gun"
offset = Vector2( 101.334, -2.66669 )
script = ExtResource( 4 )
Bullet = ExtResource( 18 )
magazine_max = 10

[node name="bullet_spawn" type="Position2D" parent="Player/player_sprite/shitty_gun"]
position = Vector2( 153.333, -17.3333 )

[node name="GoblinHand" type="Sprite" parent="Player/player_sprite/shitty_gun"]
position = Vector2( 52, 16 )
z_index = -1
texture = ExtResource( 19 )

[node name="cooldown" type="Timer" parent="Player/player_sprite/shitty_gun"]
process_mode = 0
one_shot = true

[node name="weapon_box_ui" type="Label" parent="Player/player_sprite/shitty_gun"]
margin_left = 100.0
margin_top = 5.0
margin_right = 212.0
margin_bottom = 80.0
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "|||||"

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource( 39 )

[node name="Enemy" type="Area2D" parent="."]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 38 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy" groups=["mobs"]]
position = Vector2( 307, 304 )
shape = SubResource( 6 )

[node name="enemy_sprite" type="AnimatedSprite" parent="Enemy" groups=["mobs"]]
position = Vector2( 319, 297 )
frames = SubResource( 7 )
animation = "WALK"

[node name="health_bar" type="Label" parent="Enemy" groups=["mobs"]]
margin_left = 272.0
margin_top = 215.0
margin_right = 333.0
margin_bottom = 236.0
custom_colors/font_color = Color( 0.847059, 0.0627451, 0.0627451, 1 )
custom_fonts/font = SubResource( 8 )
text = "|"

[node name="HUD" type="Node" parent="."]

[node name="WeaponHUD" type="Node" parent="HUD"]

[node name="Container" type="Container" parent="HUD/WeaponHUD"]
margin_left = 803.0
margin_top = 537.0
margin_right = 1008.0
margin_bottom = 588.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HUD/WeaponHUD/Container"]
margin_right = 200.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="WeaponName" type="Label" parent="HUD/WeaponHUD/Container/Panel"]
margin_left = 4.0
margin_top = 6.0
margin_right = 142.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 9 )
text = "Gun: "

[node name="AmmoCount" type="Label" parent="HUD/WeaponHUD/Container/Panel"]
margin_left = 6.0
margin_top = 21.0
margin_right = 141.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 10 )
text = "Ammo: "
